--- a/src/components/settingsPanel/settingsPanel.component.css
+++ b/src/components/settingsPanel/settingsPanel.component.css
@@ -1,7 +1,34 @@
 .PopUp
 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
     align-items: center;
     justify-content: center;
     width: 100vw;
     height: 100vw;
+}
+
+.PopUpOverlay
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vw;
+    background-color: bisque;
+    cursor: pointer;
+}
+
+.PopUpBox
+{
+    position: relative;
+    width: 80%;
+    margin: 0 10%;
+    padding: 50px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background-color: bisque;
+    cursor: auto;
 }
