--- a/src/styles/RateMyProfessorButton.css
+++ b/src/styles/RateMyProfessorButton.css
@@ -1,7 +1,24 @@
+#loading-text {
+  margin-right: 10px;
+  font-size: 1rem;
+  color: black;
+  white-space: nowrap;
+}
+
+.rmp-tooltip {
+  border-radius: 2px;
+  padding: 0.2em;
+  font-size: 1rem;
+  color: black;
+  background-color: white;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+}
+
 button.disabled,
 button.enabled,
 button.disabled:hover,
-button.enabled:hover {
+button.enabled:hover,
+button:focus {
   background: none;
   border: none;
 }
