--- a/src/styles/MicrosoftOath.css
+++ b/src/styles/MicrosoftOath.css
@@ -15,6 +15,6 @@
   display: flex;
   margin-top: 10%;
   margin-bottom: 5%;
-  background-color: #3B8770;
+  background-color: #3b8770;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
