--- a/src/styles/TermsOfService.css
+++ b/src/styles/TermsOfService.css
@@ -1,27 +1,7 @@
-.tos-header {
-  position: relative;
-  display: flex;
-}
-
-.tos-title {
+.tos-checkbox {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.tos-description {
-  margin-top: 2;
-  max-height: 150px;
-  overflow: auto;
-  border: 2px solid #000000;
-}
-
-.tos-description::-webkit-scrollbar {
-  width: 12px;
-}
-
-.tos-description::-webkit-scrollbar-thumb {
-  background-color: #999;
 }
 
 .tos-button {
